[tool.poetry]
name = "metrify"
version = "0.1.0"
description = ""
authors = ["Pedro Binotto <pedrosantibinotto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
pymongo = "^4.7.1"
flask-pymongo = "^2.3.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]  
pytest = "^8.2.0"
pytest-sugar = "^1.0.0"
pytest-cov = "^5.0.0"
tox = "^4.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
