[tool.poetry]
name = "metrify"
version = "0.1.0"
description = "Sistema de coleta automática de métricas com base nos webhooks do Github Projects."
authors = ["Pedro Binotto <pedrosantibinotto@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
pymongo = "^4.7.1"
flask-pymongo = "^2.3.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]  
autopep8 = "^2.1.0"
mypy = "^1.10.0"
pre-commit = "^3.7.0"
pylint = "^3.1.0"
pytest = "^8.2.0"
pytest-sugar = "^1.0.0"
pytest-cov = "^5.0.0"
tox = "^4.15.0"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.autopep8]
experimental = true
in-place = true
recursive = true
verbose = true
ignore = "E402"
aggressive = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
